WIP: Remove spacer height to debug table visibility issue

--- a/java-mvc-capas-axios/frontend-react/src/components/admin/PerfilAdmin.css
+++ b/java-mvc-capas-axios/frontend-react/src/components/admin/PerfilAdmin.css
@@ -59,7 +59,7 @@
 }
 
 .navbar-spacer {
-  height: 160px;
+  height: 0px;
   width: 100%;
 }
 
